<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="更多">
        <menu>
            <item
                android:id="@+id/menu_collection"
                android:icon="@drawable/icon_collection"
                android:title="@string/menu_collection" />
            <item
                android:id="@+id/menu_history"
                android:icon="@drawable/icon_history"
                android:title="@string/tv_history_title" />
            <item
                android:id="@+id/menu_recommend"
                android:icon="@drawable/transform"
                android:title="推荐引擎设置" />
            <item
                android:id="@+id/menu_setting"
                android:icon="@drawable/icon_setting"
                android:title="@string/menu_setting" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_about"
        android:title="关于"
        android.support.design:itemTextColor="@color/nev_item" />


</menu>